# crypto_quote_service

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  run_tests.sh
src/: BinanceQuoteService.cpp  BinanceQuoteService.h  ExchangeTick.h  StorageManager.cpp  StorageManager.h  main.cpp
src/websocket/: Websocket.cpp  Websocket.h
tests/python_poc/: test.py
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/scripts/: certificate.crt  gen_cert.sh  private.key  run_websocket_tests_with_server.sh  ws_server.py  wss_server.py
tests/unit_tests/src/: Websocket_tests.cpp
